objects/tffa__QuestionGroupTemplate__c.object
<CustomObject>
    <description>A logical group of questions. Represents a section in a form where the fields are questions.</description>
    <fields>
        <fullName>tffa__Active__c</fullName>
        <description>Reports whether the configuration is active for consumption. Derived from disabled state.</description>
        <formula>tffa__Disabled__c = False</formula>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__Condition__c</fullName>
        <description>An expression that determines whether the question group should be displayed. No condition is treated as display always.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>To access question fields, use &apos;q.{{QuestionTemplate.Code}}&apos; e.g. q.Transfer_Services === true.
To access store (global) fields use &apos;store.{{ModelPath}}&apos; e.g. store.Submission__c.BusinessUnit__c === &apos;AAA&apos;.</inlineHelpText>
        <label>Condition</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tffa__Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marks the question group as unavailable for consumption.</description>
        <label>Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__ExternalId__c</fullName>
        <description>External id as referred by external system</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tffa__IconClass__c</fullName>
        <description>Style classes for rendering an icon describing (the nature of) the question group (or section). e.g. fal fa-info-circle</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Icon class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__IsBusinessConfiguration__c</fullName>
        <description>Business configuration marker.</description>
        <formula>TRUE</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Business Configuration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the object is marked for delete.</description>
        <label>Is Deleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsLast__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the question group is the last (or logical last) section in the questionnaire. e.g. Review/Submit section. Useful when question groups are rendered one at a time with prev/next controls.</description>
        <label>Is last</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__One__c</fullName>
        <description>Power of One, Useful for reporting</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Power of One, Useful for reporting</inlineHelpText>
        <label>One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__Questionnaire__c</fullName>
        <description>Reference to parent Questionnaire</description>
        <label>Questionnaire</label>
        <referenceTo>tffa__Questionnaire__c</referenceTo>
        <relationshipLabel>Question Groups</relationshipLabel>
        <relationshipName>QuestionGroups</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>tffa__SortOrder__c</fullName>
        <description>The relative order of the group.</description>
        <label>Sort order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__Title__c</fullName>
        <description>The display title of the group (or section). Can be text or resource bundle (RB) key.  In case of RB key, the key must be maintained in the RB.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Title</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <label>Question Group Template</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Question Group Templates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>